# dylanbowman.github.io

./: CNAME  README.md  about.html  bestyear.html  blind-deep-deployment-evals.html  blog.html  dev-tools-2026.html  goblin-mode.html  index.css  index.html  index.js  llm-paradigm-notes.html  main.py  more-about-me.html  package.json  page.css  pangram-general-managers.html  pyproject.toml  reading-list-for-generalists.html  render_markdown.py  rl.html  superhuman-articulacy.html  test.html
fonts/tex-gyre-termes/: GUST-FONT-LICENSE.txt
markdown/: about.md  bestyear.md  goblin-mode.md  index.md  rl.md  test.md
resources/: bardata.csv  scene4.txt  scene5.txt
sct/: index.html
talk/: index.html  test.css
tex/: build-html.sh  domoregood.4ct  domoregood.4tc  domoregood.css  domoregood.dvi  domoregood.fdb_latexmk  domoregood.fls  domoregood.html  domoregood.idv  domoregood.lg  domoregood.out  domoregood.xref  index.css  index.html  mycfg.cfg  test.4ct  test.4tc  test.dvi  test.fdb_latexmk  test.fls  test.html  test.idv  test.lg  test.out  test.tex  test.xref  testse1.html
tex/src/: domoregood.tex  index.tex
tex/utils/: mycfg.cfg
vax/: index.html  package-lock.json
vax/resources/: vaxdata.csv
